--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ keywords = ["music-theory", "harmony", "scales", "chords", "intervals"]
 license = "MIT"
 
 [dependencies]
+lazy_static = "1.4.0"
 regex = "1.9.4"
 thiserror = "1.0.47"
